Some modifications to max icon width on MacOS